# ads122x04-rs

./: Cargo.toml  README.md
.github/workflows/: changelog.yml
src/: interface.rs  lib.rs  registers.rs
